--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,32 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+
+const pageTitle = "About Me";
+
+const identity = {
+
+    firstName: "Cameron",
+    country: "United States",
+    occupation: "Mathematics & Physics Tutor",
+    hobbies: ["Graphic Design", "Programming", "RockSat"]
+
+}
+
+const skills = ["JS/CSS/HTML", "C/C++", "Java", "Single- and Multi-Variable Calculus"];
+
+const happy = true;
+const finished = false;
+const goal = 3;
+
+const skillColor = "crimson";
+
+const fontWeight = "bold";
+
+const textCase = "uppercase";
 
 ---
-
-<a href="/">Home</a>
-<a href="/about">About</a>
-<a href="/blog">Blog</a>
 
 <html lang="en">
 	<head>
@@ -12,13 +34,54 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
+
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+
+        h1 {
+            color: purple;
+            font-size: 4rem;
+        }
+
+        .skill {
+            color: var(--skillColor);
+            font-weight: var(--fontWeight);
+            text-transform: var(--textCase);
+        }
+
+    </style>
+
 	<body>
-		<h1>About Me</h1>
+
+        <Header />
+
+		<h1>{pageTitle}</h1>
 
         <h2>I'm a dude tbh</h2>
 
-        <p>This is part of a tutorial btw. But if you want to know more about me call 248-434-5508</p>
+        <p>Here are some facts about me:</p>
+
+        <ul>
+
+            <li>My name is {identity.firstName}</li>
+            <li>My live in {identity.country} and I work as a {identity.occupation}</li>
+
+            { identity.hobbies.length >= 2 &&
+                <li>Two of my favorite hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+            }
+
+        </ul>
+
+        <p>My skills are:</p>
+        <ul>
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
+        </ul>
+
+        {happy && <p>I am not happy AT ALL to be learning Astro :(</p>}
+        {finished && <p>I finished this tutorial!</p>}
+        {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is to finish in not 3 days.</p>}
+
+        <Footer />
 	</body>
 </html>
