--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,10 @@
-<a href="/">Home</a>
-<a href="/about">About</a>
-<a href="/blog">Blog</a>
+---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
+
+const pageTitle = "Blog";
+---
 
 <html lang="en">
 	<head>
@@ -8,13 +12,23 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<h1>BLOG</h1>
+        <Header />
+
+		<h1>{pageTitle}</h1>
 
         <h2>This is a BLOG.</h2>
 
         <p>If you didn't know, this is a BLOG.</p>
+
+        <ul>
+            <li><a href="/posts/post-1/">Post 1</a></li>
+            <li><a href="/posts/post-2/">Post 2</a></li>
+            <li><a href="/posts/post-3/">Post 3</a></li>
+        </ul>
+
+        <Footer />
 	</body>
 </html>
