--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css';
 
+const pageTitle = "Home Page"
 ---
-
-<a href="/">Home</a>
-<a href="/about">About</a>
-<a href="/blog">Blog</a>
 
 <html lang="en">
 	<head>
@@ -12,9 +12,12 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
+		<Header />
 		<h1>My Astro Site</h1>
+
+		<Footer />
 	</body>
 </html>
