--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,48 +1,79 @@
 ---
+import BaseLayout from "./BaseLayout.astro";
 const { frontmatter } = Astro.props;
 ---
-<style is:global>
 
-.banner {
-
-    padding: 5px;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-
-}
-
-.banner .banner-img {
-
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    z-index: -2;
-    width: 100%;
-    height: 100%;
-
-
-}
-
-.title {
-
-    margin-top: 0;
-
-}
-
-
-</style>
-<meta charset="utf-8" />
-
-<div class="banner" data-url={frontmatter.image.url}>
+<BaseLayout pageTitle={frontmatter.title}>
 
     <div class="info">
-        <h1 class="title">{frontmatter.title}</h1>
+
         <span><i><b>Written by {frontmatter.author}</b> | Published on: {frontmatter.pubDate.toString().slice(0, 10)}</i></span>
-    </div>    
 
-    <!-- <img class="banner-img"src={frontmatter.image.url} alt={frontmatter.image.alt} /> -->
+    </div>
 
-</div>
-<slot />
+    <div class="tags">
+
+        {frontmatter.tags.map((tag: string) => 
+            <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+        )}
+
+    </div>
+
+    <slot />
+
+</BaseLayout>
+
+<style is:global>
+
+    a {
+
+        color: #00539F;
+
+    }
+
+    .tags {
+        display: flex;
+        flex-wrap: wrap;
+
+    }
+
+    .tag {
+
+        margin: 0.25em;
+        border: dotted 1px #a1a1a1;
+        border-radius: .5em;
+        padding: .5em 1em;
+        font-size: 1.15em;
+        background-color: #F8FCFD;
+
+    }
+
+    .banner {
+
+        padding: 5px;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+
+    }
+
+    .banner .banner-img {
+
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        z-index: -2;
+        width: 100%;
+        height: 100%;
+
+
+    }
+
+    .title {
+
+        margin-top: 0;
+
+    }
+
+</style>
