Design changes and stuff >:).

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import Social from './Social.astro';
 import Signature from './Signature.astro';
 import '../styles/global.css';
-import Seperator from './seperator.astro';
+import Seperator from './Seperator.astro';
 
 // force footer to bottom of page if content height smaller than screen height
 ---
@@ -37,13 +37,10 @@ import Seperator from './seperator.astro';
 
 <style>
 
-
-
     footer {
 
         display: flex;
         gap: 1rem;
-        margin-top: 2rem;
         align-items: center;
         justify-content: space-between;
 
@@ -69,7 +66,7 @@ import Seperator from './seperator.astro';
         height: 150%;
         z-index: -2;
         background: linear-gradient(0deg, var(--custom-dark-brown) 60%, var(--custom-dark-brown-0));
-                    /* url(#noiseFilter); */
+                    /* url(#noiseFilter);
 
     } */
 
