--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,15 +3,27 @@ import "../styles/global.css";
 ---
 
 <div id="main-menu" class="nav-links">
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/blog">Blog</a>
-    <a href="/tags">Tag Index</a>
+    <div class="home-link">
+
+        <a href="/">Home</a>
+        
+    </div>
+
+    <div class="other-links">
+
+        <a href="/about">About</a>
+        <a href="/blog">Blog</a>
+        <a href="/tags">Tag Index</a>
+
+    </div>
+
 </div>
 
 <style>
 
     div {
+
+        width: 100vw;
 
         background-color: var(--custom-brown);
 
