--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,19 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
 import { Image } from "astro:assets";
-import bgImage from "../images/bg.svg"
+import FullWidthSection from "../components/FullWidthSection.astro";
+import bgImage from "../images/bg.svg";
 
 const pageTitle = "Home Page"
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-	<h2>My awesome blog subtitle</h2>
-	<Image src={bgImage} alt="Litty bg."/>
+	
+	<FullWidthSection height="100vh" bgImg={bgImage}>
+
+		<h2>My awesome blog subtitle</h2>
+		test
+
+	</FullWidthSection>
+
 </BaseLayout>
