--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,14 +36,12 @@ html {
 }
 
 body {
-  margin: 0 auto;
+  margin: 0 0;
   width: 100%;
 }
 
 .content {
 
-  max-width: 120ch;
-  padding: 1rem;
   line-height: 1.5;
   color: var(--custom-dark-brown)
 
@@ -106,18 +104,20 @@ h1 {
   
 }
 
-:has(.menu[aria-expanded="true"]) .nav-links {
+/* :has(.menu[aria-expanded="true"]) .nav-links {
   
   display: unset;
 
-}
+} */
 
 @media screen and (min-width: 636px) {
 
   .nav-links {
 
-    margin-left: 5px;
     display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    
     position: static;
     width: auto;
     background: none;
@@ -134,6 +134,12 @@ h1 {
   .menu {
 
     display: none;
+
+  }
+
+  .other-links {
+
+    width: auto;
 
   }
 
